--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
     "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
     "@reduxjs/toolkit": "^2.2.1",
+    "@types/azure": "^0.9.20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/react-plotly.js": "^2.6.3",
     "dotenv": "^16.4.5",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "json-server": "^1.0.0-alpha.23",
     "next": "14.1.0",
     "openai": "^4.28.0",
@@ -32,15 +37,9 @@
     "react-dom": "^18",
     "react-plotly.js": "^2.6.0",
     "react-redux": "^9.1.0",
-    "sharp": "^0.33.2"
-  },
-  "devDependencies": {
-    "@types/azure": "^0.9.20",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "typescript": "^5"
+    "sharp": "^0.33.2",
+    "typescript": "^5",
+    "word-wrap": "^1.2.5",
+    "@types/node": "^22.6.1"
   }
 }
