--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "^5.15.10",
     "@reduxjs/toolkit": "^2.2.1",
     "@types/azure": "^0.9.20",
+    "@types/node": "^22.6.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-plotly.js": "^2.6.3",
@@ -30,7 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "json-server": "^1.0.0-alpha.23",
-    "next": "14.1.0",
+    "next": "^14.2.13",
     "openai": "^4.28.0",
     "plotly.js": "^2.29.1",
     "react": "^18",
@@ -39,7 +40,6 @@
     "react-redux": "^9.1.0",
     "sharp": "^0.33.2",
     "typescript": "^5",
-    "word-wrap": "^1.2.5",
-    "@types/node": "^22.6.1"
+    "word-wrap": "^1.2.5"
   }
 }
